--- a/css/style.css
+++ b/css/style.css
@@ -966,9 +966,9 @@ address { font-style: normal; }
   .hero-tagline { font-size: 15px; margin-bottom: 24px; }
   .hero-logo { padding: 36px 0 16px; gap: 10px; }
   .hero-logo h1 { font-size: clamp(32px, 10vw, 48px); }
-  .hero-icons { gap: 20px; margin: 32px 0; }
+  .hero-icons { gap: 40px; margin: 32px 0; }
   .hero-icons img { height: 32px; }
-  .hero-product { padding-top: 20px; margin: 30px auto; }
+  .hero-product { padding-top: 30px; margin: 60px auto; }
   .hero-features { gap: 10px; padding-bottom: 105px; margin-top: 30px; }
   .hero-features a { width: 110px; padding: 11px 0; font-size: 15px; }
   .tooltip { width: 200px; padding: 14px; font-size: 13px; min-height: 85px; }
@@ -1065,15 +1065,16 @@ address { font-style: normal; }
 
   .se-header .logo { margin: auto 0; }
   .se-header .logo img { height: 26px; padding-top: 5px;}
+
   /* Hero */
-  .se-hero { min-height: auto; padding: 80px 12px 0; }
+  .se-hero { min-height: auto; padding: 120px 12px 0; }
   .hero-tagline { font-size: 14px; margin-bottom: 20px; }
   .hero-logo { padding: 32px 0 16px; gap: 8px; }
   .hero-logo img { height: 35px; }
   .hero-logo h1 { font-size: 36px; }
   .hero-icons { gap: 36px; margin: 24px 0; }
   .hero-icons img { height: 28px; }
-  .hero-product { margin: 30px auto; }
+  .hero-product { margin: 60px auto; }
   .hero-features { gap: 8px; padding-bottom: 100px; margin-top: 24px; }
   .hero-features a { width: 100px; padding: 10px 0; font-size: 14px; }
   .tooltip { width: 180px; padding: 12px; font-size: 12px; min-height: 80px; }
@@ -1177,7 +1178,7 @@ address { font-style: normal; }
 }
 
 /* ===== Touch Device ===== */
-@media (hover: none) {
+/*@media (hover: none) {
   .hero-features li:hover .tooltip { opacity: 0; }
   .hero-features li:focus-within .tooltip { opacity: 1; }
-}
+}*/
